exports[`<Rating />  render tests should match previous snapshot with alternative props 1`] = `
<div
  className="ratings-container">
  <span>
    <div
      className="sr-only">
      This app has a rating of 
      1.5
       stars out of 5.
    </div>
    <span
      className="ratings-stars">
      <span
        aria-hidden="true"
        className="ratings-star icon-star" />
      <span
        aria-hidden="true"
        className="ratings-star icon-star-half-o" />
      <span
        aria-hidden="true"
        className="ratings-star icon-star-o" />
      <span
        aria-hidden="true"
        className="ratings-star icon-star-o" />
      <span
        aria-hidden="true"
        className="ratings-star icon-star-o" />
    </span>
  </span>
</div>
`;

exports[`<Rating />  render tests should match previous snapshot with default props 1`] = `
<div
  className="ratings-container">
  <span>
    <div
      className="sr-only">
      This app has a rating of 
      1
       stars out of 5.
    </div>
    <span
      aria-hidden={true}
      className="ratings-number">
       
    </span>
    <span
      className="ratings-stars">
      <span
        aria-hidden={true}
        className="ratings-star icon-star" />
    </span>
    <span
      className="app-reviews-count hidden-xs">
      <span
        className="sr-only">
        Reviewed by 
        1
         people.
      </span>
      <span
        aria-hidden="true">
         (
        1
        )
      </span>
    </span>
  </span>
</div>
`;
